package com.niyaj.popos.features.charges.domain.util

object ChargesTestTags {



    const val CHARGES_NAME_FIELD = "Charges Name"
    const val CHARGES_NAME_ERROR = "Charges Name Error"
    const val CHARGES_AMOUNT_FIELD = "Charges Amount"
    const val CHARGES_AMOUNT_ERROR = "Charges Amount Error"
    const val CHARGES_APPLIED_SWITCH = "Charges Applied Switch"
    const val ADD_EDIT_CHARGES_BUTTON = "AddEdit Charges"
}