...
    <string name="app_description">Restaurant POS Application.</string>
    <string name="logo_description">Popos Highlight</string>
    <string name="password_visible_content_description">Password Visible</string>
    <string name="password_hidden_content_description">Password Hidden</string>
    <string name="create_order">Create Order</string>
    <string name="back">Navigate Back</string>
    <string name="search_icon">Search Icon</string>
    <string name="popos_highlight">Popos Highlight</string>
    <string name="increaseQuantity">Increase Quantity</string>
    <string name="decreaseQuantity">Decrease Quantity</string>
    <string name="add_items_to_cart_button">Add Items to cart</string>
    <string name="add_icon">Add Icon</string>
    <string name="cart_screen">Cart Screen</string>
...
    <string name="create_address">Add New Address</string>
    <string name="create_customer">Add New Customer</string>
    <string name="no_items_in_customers">Customers Not Found</string>
    <string name="no_items_in_address">Address Not Found</string>
    <string name="edit_customer">Update Customer Details</string>
    <string name="create_new_order">Create New Order</string>
    <string name="close_icon">Close Icon</string>
    <string name="no_items_in_order">You have not placed any order today.</string>
    <string name="filter_order">Filter Orders</string>
    <string name="search_item_not_found">Searched Item Not Found</string>
    <string name="print_order">Print Order</string>
    <string name="filter_address">Filter Address</string>
    <string name="create_new_add_on">Create New AddOn</string>
    <string name="filter_add_on_item">Filter AddOn Item</string>
    <string name="edit_add_on_item">Update AddOn Item</string>
    <string name="no_items_in_addon">AddOn Items Not Found</string>
    <string name="filter_charges_item">Filter Charges Item</string>
    <string name="no_items_in_charges">Charges not found</string>
    <string name="create_new_employee">Add New Employee</string>
    <string name="update_employee">Update Employee Details</string>
    <string name="create_new_partner">Add New Partner</string>
    <string name="update_partner">Update Partner Details</string>
    <string name="create_new_expenses_category">Create New Category</string>
...
